<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_setting"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_msg"
        android:orderInCategory="300"
        android:title="@string/menu_message"
        android:icon="@drawable/ic_action_msg"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        />
    <item android:title="@string/search_type"
          app:showAsAction="always">
        <menu>
            <group android:id="@+id/exclusive_checkable_group"
                android:checkableBehavior="single">
                <!-- Notice how these items inherit from the group. -->
                <item android:id="@+id/search_type_title"
                    android:title="@string/search_title"
                    android:checked="true"/>
                <item android:id="@+id/search_type_all"
                    android:title="@string/search_all" />

            </group>
        </menu>
    </item>

</menu>
